# guest_search

./: .env.example  .flake8  .gitignore  README.md  TRELLO_SETUP.md  demo_ui.py  enrich_previous_guests.py  guest_search.py  main.py  migrate_previous_guests.py  package.json  pyproject.toml  pytest.ini  requirements.txt  select_guests.py  setup.cfg  test_enrichment.py  test_enrichment_small.py  test_fetch_behavior.py  test_fetch_content.py  test_linkedin_enrichment.py  test_name_extraction.py  test_quick.py  test_single_query.py  test_spacy_extraction.py  topic_search.py
data/: previous_guests.json.backup
docs/: LEARNING_SYSTEM.md  PORTKEY_SETUP.md  QUICK_TEST_REFERENCE.md  RATE_LIMIT_HANDLING.md  README-marp-setup.md  TEST_COVERAGE_SUMMARY.md  TRELLO_SETUP.md  TROUBLESHOOTING.md  USAGE.md  VSCODE_SETUP_COMPLETE.md  VSCODE_TEST_GUIDE.md  architecture-presentation.md  architecture.md  template-presentation.md
docs/presentations/: README.md
scripts/: build-all-presentations.sh  build-presentations.sh  mermaid-to-images.js
src/guest_search/: __init__.py  agent.py  config.py  interactive_selector.py  prompts.py  smart_search_tool.py  tools.py  topic_agent.py  trello_manager.py
tests/: INTEGRATION_TESTS.md  README.md  __init__.py  conftest.py  test_api_integration.py  test_config.py  test_conversation_flow.py  test_date_logic.py  test_file_operations.py  test_json_parsing.py  test_learning.py  test_portkey_adapter.py  test_rate_limit_handling.py  test_search_providers.py  test_spacy_ner.py  test_topic_agent.py  test_trello_integration.py  test_web_scraping.py
(+22 files in other folders)
