[project]
name = "guest-search"
version = "0.1.0"
description = "A tool for finding and managing podcast guests"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "freezegun>=1.4.0",
    "responses>=0.24.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []
# Enable unsafe fixes for auto-fixing on save
unfixable = []
# This allows all fixes including "unsafe" ones like removing unused variables
extend-safe-fixes = ["F401", "F841"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pytest configuration moved to pytest.ini for better VSCode integration

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
